2004-12-28  Stefan Reuther  <Streu@gmx.de>

	* hullfunc.c (doHullAssignment): don't die on invalid hull names

	* tons.c, ex11.c: new

2004-08-23  Maurits van Rees <maurits@vanrees.org>

	* Added {Ship|Hull}{Heats|Cools} functions.

2004-08-07  Stefan Reuther  <Streu@gmx.de>

	* hullfunc.c (shipHasSpecial): add support for ship-specific functions

	* documentation updated

2003-08-01  Maurits van Rees <maurits@vanrees.org>

	* added HullDoesXXX() functions
	
2003-12-23  Stefan Reuther  <Streu@gmx.de>

	* exp.c: new

	* auxdata.c (GetAuxdataChunkById et al): new

	* makefile.gcc: added `docs' target

Thu Aug 28 19:46 2003  Piotr

	* vgapdat4.c (PutMinefieldPositionX, PutMinefieldPositionY, PutMinefieldWeb):
 	added these functions (Piotr Winiarczyk)

Sat May 10 21:09:07 2003  Stefan  <Streu@gmx.de>

	* pconfig.c (Read_HConfig_File): removed bogus 'fclose'

	* vgapdat2.c (PutShipFC, PutPlanetFCode): added proper 'const'
	qualifier

	* vgapdat1.c (ChangePlanetOwner): published this function

Wed May  7 21:16:58 2003  Stefan  <Streu@gmx.de>

	* auxdata.c (DefaultRemoteState): added functions to mess with
 	default remote status

Sat Apr 26 12:34:25 2003  Stefan  <Streu@gmx.de>

	* auxdata.c (WriteAuxVersionInfo): fixed another timestamp issue

Sun Mar 16 17:16:03 2003  Stefan  <Streu@gmx.de>

	* vgaputil.c: removed Borland #pragmas

	* auxdata.c, hostio.c: timestamp handling: finally got it right

	* config.hi4: added newest version from PHost

	* enum.c (ReinitWraparound): new; call this after loading
	configuration, for more robustness

	* hullfunc.c: forward compatibility mode added; don't bomb out
	on invalid files; read shiplist.txt.

	* pconfig.c: read shiplist.txt; accept tristatex options;
	accept "External" or "Allies" for boolean options

	* version.h: fixed typo (#ifdef instead of #ifndef, d'ooh!)

	* vgapdat2.c: use more robust method to determine size of
	ship.hst-to-be

Wed Mar 12 09:14:19 2003  Stefan  <Streu@gmx.de>
